--- a/src/components/ImageSlider/imageSlider.css
+++ b/src/components/ImageSlider/imageSlider.css
@@ -1,10 +1,5 @@
-.product-cards{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.sliderStyles {
+
+.slider {
     position: relative;
     height: 100%;
 
@@ -12,7 +7,7 @@
 }
 
 
-.leftArrowStyles {
+.slider__left-arrow {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
@@ -27,7 +22,7 @@
     padding-bottom: 10px;
 }
 
-.rightArrowStyles {
+.slider__right-arrow {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
@@ -41,11 +36,11 @@
     width: 4rem;
     padding-bottom: 10px;
 }
-.leftArrowStyles:hover,.rightArrowStyles:hover{
+.slider__left-arrow:hover,.slider__right-arrow:hover{
     background-color: #d6ecf5;
 }
 
-.slideStyles {
+.slider__slide {
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -53,13 +48,19 @@
     background-position: center;
 }
 
-.dotsContainerStyles{
+.slider__product-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.slider__dots-container{
     display: flex;
     justify-content: center;
 }
 
 
-.dotStyle {
+.slider__dot {
     margin: 0px 3px 20px 3px;
     cursor: pointer;
     font-size: 20px;
@@ -67,7 +68,7 @@
   
 }
 
-.dotStyle.active {
+.slider__dot.active {
     
     color: #5BC1ED;
 }
