--- a/src/components/QuestionContainer/questionContainer.css
+++ b/src/components/QuestionContainer/questionContainer.css
@@ -10,22 +10,31 @@
     flex-direction: row;
     align-items: center;  
 }
- .question-container__header {
+.question-container__header {
     display: flex;
     justify-content: space-between;
     gap: 1rem;
     flex-wrap: wrap-reverse;
+    align-items: center; 
     line-height: 44px;
-   
- }
+}
+
+.header-left {
+    flex: 1; 
+    text-align: center; 
+}
+
+.header-right {
+    width: 5rem;
+}
 .question-container__header h2{
-    font-family: 'Grange';
     color:#1C2635;
-    flex: 1;
+    flex: 3;
 }
 .question-container__progress {
     width: 5rem;
-    margin: auto;
+    align-self: flex-end;
+    
 }
 .CircularProgressbar-path {
     stroke: #AADDF3 !important;
